Fix image sizing for now, edited whole page elements spacing

--- a/style.css
+++ b/style.css
@@ -25,13 +25,25 @@ p {
 }
 
 .content {
+    padding: 0px 10% 0px 50px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+}
+
+.service-description {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 100px;
+    gap: 30px;
 }
 
 .form-wrap {
+    margin-top: 20px;
     width: 50%;
+    gap: 50px;
     display: grid;
+    grid-template-rows: repeat(3, 1fr);
     grid-template-columns: repeat(2, 1fr);
 }
 
@@ -42,12 +54,28 @@ p {
 }
 
 .form-element label {
-    
+    text-transform: uppercase;
+    font-size: 0.8rem;
+    font-weight: 700;
+    letter-spacing: 1px;
 }
 
 .form-element input {
     border: none;
-    border: 1px solid #ccc;
-    padding: 6px 20px;
-    border-radius: 3px;
+    border: 1px solid rgba(174, 174, 174, 0.349);
+    padding: 8px 30px;
+    border-radius: 6px;
+}
+
+.submit-button {
+    margin-top: 50px;
+}
+
+.submit-button button {
+    border: none;
+    background-color: #da6b32;
+    color: white;
+    font-size: 1.2rem;
+    padding: 10px 50px;
+    border-radius: 10px;
 }
